# quotes-core

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs  quote_handler.rs
application/: Cargo.toml
application/src/: quote.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2024-01-12-174900_create_quotes/: down.sql  up.sql
src/: main.rs
