[package]
name = "quotes-core-api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }

[dependencies]
quotes-core-lib = { path = "../domain" }
rocket = "0.5.0"
rocket_codegen = { version = "0.5.0", features = ["json"] }
diesel = { version = "1.4", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
uuid = "0.8"
chrono = "0.4"
r2d2 = "0.9"
dotenv = "0.15"
