[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
diesel = { version = "1.4", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
uuid = "0.8"
chrono = "0.4"
r2d2 = "0.8.10"
dotenv = "0.15"
